[project]
name = "er-aws-rds"
version = "0.11.3"
description = "ERv2 module for managing AWS rds instances"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = "~= 3.12.0"
dependencies = [
    "boto3-stubs[ec2,rds]==1.40.64",
    "boto3==1.40.65",
    "external-resources-io==0.6.2",
    "pydantic==2.12.3",
    "semver==3.0.4",
]

[project.urls]
homepage = "https://github.com/app-sre/er-aws-rds"
repository = "https://github.com/app-sre/er-aws-rds"
documentation = "https://github.com/app-sre/er-aws-rds"

[dependency-groups]
dev = [
    # Development dependencies
    "mypy==1.18.2",
    "pytest-cov==7.0.0",
    "pytest==8.4.2",
    "ruff==0.14.3",
]

[project.scripts]
generate-tf-config = 'er_aws_rds.config:generate_tf_files'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",    # Missing copyright header
    "D100",   # Missing docstring in public module
    "D101",
    "D102",
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D211",   # No blank lines allowed before class docstring
    "D212",   # multi-line-summary-first-line
    "D213",   # multi-line-summary-second-line
    "D4",     # Doc string style
    "E501",   # Line too long
    "G004",   # Logging statement uses string formatting
    "S101",   # Use of assert detected. Pytest uses assert
    "EM101",
    "EM102",
    "TRY003",
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
    "ERA001",
    "S404",
    "S603",
    "PLR2004",
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["er_aws_rds"]

# Mypy configuration
[tool.mypy]
files = ["er_aws_rds", "hooks", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
